# hls-video-gallery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: validate.yml
config/: bunny.example.env  gallery.example.json  tags-general.json  users.example
docs/: BUNNY_CDN.md  CONFIGURATION.md  MAC_MANAGER.md  OPERATIONS.md  QUALITY_ANALYSIS.md
presets/general/: gallery.json
scripts/: add-user.sh  configure.py  deploy-files.py  doctor.sh  install-analyzer.sh  install-dependencies.sh  install-mac-manager.sh  install.sh  json-value.py  package-release.sh  prepare-media-permissions.py  validate.sh
site/: .htaccess  .share-common.php  index.html  media-access.php  preview.html  share-create.php  share-image.php  share-media.php  share.php
site/_tools/: bunny_sync.py  cleanup_cache.py  content_analyzer.py  encode_monitor.py  quality_analyzer.py  quick_rethumbnail.py  (+3 more)
systemd/: hls-gallery-analyzer.service  hls-gallery-analyzer.timer  hls-gallery-bunny.service  hls-gallery-media-permissions.path  hls-gallery-media-permissions.service  hls-gallery-media-permissions.timer  hls-gallery-monitor.service  hls-gallery-quality.service  hls-gallery-quality.timer  hls-gallery-scan.service  hls-gallery-scan.timer
tests/: test_ingest_order.py  test_mac_manager.py  test_quality_analysis.py  test_quality_explorer.js
tools/: hls-gallery-manager.py
tools/quality-analyzer/: CMakeLists.txt  Makefile  README.md  test-renderer.sh  test-smoke.sh
tools/quality-analyzer/src/: main.cpp  report_renderer.hpp  report_renderer_main.cpp
(+14 files in other folders)
